--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0"
+    "webpack-dev-middleware": "^1.10.0",
+    "youtube-api-search": "0.0.5"
   }
 }
