Overhauled CSS for UI and UX

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-random-movie",
+  "name": "react-choose-movie",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
